fixed text overflow

--- a/frontend/packages/shared/src/components/GiteaHeader/ThreeDotsMenu/LocalChangesModal/LocalChangesModal.module.css
+++ b/frontend/packages/shared/src/components/GiteaHeader/ThreeDotsMenu/LocalChangesModal/LocalChangesModal.module.css
@@ -1,7 +1,8 @@
-.modalContent {
+.localChangesContent {
   display: flex;
-  height: auto;
-  width: 50vw;
+  height: calc(var(--modal-content-max-height));
+  width: 70vw;
+  overflow: hidden;
 }
 
 .headingWrapper {
